--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -68,6 +68,6 @@ markdown_extensions:
   - md_in_html
 
 extra_javascript:
-  - javascripts/mathjax.js
+  - scripts/mathjax.js
   - https://polyfill.io/v3/polyfill.min.js?features=es6
   - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
