--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,8 +1,8 @@
 site_name: 元规则笔记
-site_url: https://github.com/Zacharia2/meta-rule-notes
+site_url: https://github.com/Zacharia2/Meta-R-Notes
 
-repo_name: meta-rule-notes
-repo_url: https://github.com/Zacharia2/meta-rule-notes
+repo_name: Meta-R-Notes
+repo_url: https://github.com/Zacharia2/Meta-R-Notes
 
 edit_uri: blob/main/docs/
 
